Created message component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@import "~reset-scss";
 @import "~antd/dist/antd.css";
 
 body,
@@ -6,4 +7,5 @@ html,
 .wrapper {
   height: 100%;
   color: #202002;
+  font-size: 14px;
 }
