--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -104,4 +104,53 @@
       }
     }
   }
+
+  &--is-typing {
+    #{$self}__bubble {
+      background-color: $message-typing-blue;
+      box-shadow: 0px 5px 5px rgba(54, 116, 255, 0.04);
+      padding: 15px 18px;
+    }
+  }
+
+  &--image {
+    #{$self}__attachments {
+      img {
+        width: 150px;
+        height: 150px;
+      }
+    }
+  }
+
+  &__typing {
+    span {
+      height: 8px;
+      width: 8px;
+      border-radius: 50%;
+      background: $message-typing-circle;
+      display: inline-block;
+      margin-right: 8px;
+      animation-name: typingAnimation;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+      animation-direction: 0.5s;
+
+      &:nth-of-type(2) {
+        animation-duration: 0.6s;
+      }
+      &:nth-of-type(3) {
+        animation-duration: 0.7s;
+      }
+    }
+  }
+}
+
+@keyframes typingAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
