--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -70,6 +70,58 @@
     }
   }
 
+  &--is-audio {
+    audio {
+      display: none;
+    }
+
+    #{$self}__bubble {
+      width: 280px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #{$self}__audio {
+      &-info {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+      }
+
+      &-btn {
+        button {
+          cursor: pointer;
+          border: 0;
+          width: 28px;
+          height: 28px;
+          border-radius: 30px;
+          background: #0f3997;
+        }
+
+        img {
+          height: 13px;
+        }
+      }
+
+      &-duration {
+        color: white;
+        font-weight: 500;
+        opacity: 0.5;
+        font-size: 12px;
+      }
+
+      &-progress {
+        left: 0;
+        top: 0;
+        position: absolute;
+        background-color: #418fff;
+        height: 100%;
+        transition: width 0.3s ease;
+      }
+    }
+  }
+
   &--isme {
     display: flex;
     flex-direction: row-reverse;
