Dialog search, user fullname, status, message area

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,11 @@
 @import "~antd/dist/antd.css";
 
+@import "./layouts/_chat.scss";
+
+body {
+  background-color: #f4f7fd;
+}
+
 body,
 html,
 #root,
